# django-example

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.claude/: settings.json
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  test_debug.py
backend/config/: urls.py
backend/config/settings/: base.py  dev.py  test.py
backend/knowledge/: admin.py  api.py  models.py  schemas.py  services.py  tasks.py
backend/knowledge/migrations/: 0001_initial.py
backend/knowledge/tests/: factories.py  test_api.py  test_models.py  test_services.py
backend/shared/: apps.py  exceptions.py  middleware.py  models.py
backend/teams/: admin.py  api.py  models.py  schemas.py  services.py  tasks.py
backend/teams/migrations/: 0001_initial.py
backend/tickets/: admin.py  api.py  models.py  schemas.py  services.py  tasks.py
backend/tickets/migrations/: 0001_initial.py
backend/tickets/tests/: factories.py  test_api.py  test_models.py  test_services.py
backend/triage/: admin.py  api.py  models.py  schemas.py  services.py  tasks.py
backend/triage/migrations/: 0001_initial.py
docs/: getting-started.md  index.md  interview-django.md  interview-python.md  learning-path.md
docs/api/: endpoints.md
docs/architecture/: decisions.md  domain-model.md  overview.md
docs/backend/: project-structure.md  teams.md  tickets.md  triage.md
docs/frontend/: overview.md
docs/learning/: 01-python-syntax.md  02-project-structure.md  03-models-and-orm.md  04-services.md  05-api-layer.md  (+4 more)
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
(+4 files in other folders)
